--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
-github: # jeffcampbellmakesgames
+github: jeffcampbellmakesgames
 ko_fi: stampyturtle
